revert back removed legacy code and add exports